@@ -1,3 +1,7 @@
+2003-01-17  Adam Byrtek  <alpha@debian.org>
+
+	* doc/mc.1.in (Layout): Document 'Xterm window title' option.
+
 2003-01-16  David Martin  <dmartina@excite.com>
 
 	* doc/mc.1.in: Add EXTernal virtual File System node (extfs).
